--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open",
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:pro": "vue-tsc && vite build --mode production",
     "build": "vue-tsc -b && vite build",
     "lint": "eslint src",
     "fix": "eslint src --fix",
@@ -12,13 +14,22 @@
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "commitlint": "commitlint --config commitlint.config.cjs -e -V",
+    "prepare": "husky install",
+    "preinstall": "node ./scripts/preinstall.js"
   },
   "dependencies": {
-    "vue": "^3.4.35"
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.3",
+    "element-plus": "^2.8.0",
+    "pinia": "^2.2.1",
+    "vue": "^3.4.35",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.9.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^8.57.0",
@@ -29,6 +40,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.9.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.41",
     "postcss-html": "^1.7.0",
     "postcss-scss": "^4.0.9",
@@ -47,6 +59,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.0",
+    "vite-plugin-mock": "^3.0.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.29"
   }
 }
