feat: add server

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = 'production'
-VITE_APP_TITLE = '郭海枫暑期项目实践'
+VITE_APP_TITLE = '郭海枫暑期实践项目'
 VITE_APP_BASE_API = '/prod-api'
+VITE_SERVE="http://sph-api.atguigu.cn"
