--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,4 @@
-//发开环境配置文件
-# 变量必须以 VITE_ 为前缀才能暴露给外部读取
 NODE_ENV = 'development'
-VITE_APP_TITLE = '郭海枫暑期项目实践'
+VITE_APP_TITLE = '郭海枫暑期实践项目'
 VITE_APP_BASE_API = '/api'
+VITE_SERVE="http://sph-api.atguigu.cn"
