--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.3",
     "element-plus": "^2.8.0",
+    "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^2.2.1",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3"
